# docs/swagger.yaml
@@ -252,6 +252,16 @@ components:
       required:
       - name
       type: object
+    schema.CreateProjectDocumentRequest:
+      properties:
+        file_path:
+          type: string
+        name:
+          type: string
+      required:
+      - file_path
+      - name
+      type: object
     schema.CreateProjectModuleRequest:
       properties:
         code:
@@ -1459,6 +1469,50 @@ paths:
       summary: Get dashboard summary
       tags:
       - dashboard
+  /v1/documents/{documentID}:
+    delete:
+      parameters:
+      - description: Document ID (UUID)
+        in: path
+        name: documentID
+        required: true
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                additionalProperties:
+                  type: string
+                type: object
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/problemdetail.ProblemDetail'
+          description: Bad Request
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/problemdetail.ProblemDetail'
+          description: Not Found
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/problemdetail.ProblemDetail'
+          description: Internal Server Error
+      summary: Delete a project document
+      tags:
+      - projects
   /v1/environments/{envID}:
     get:
       description: Get details of a single environment by ID
@@ -2370,6 +2424,81 @@ paths:
                 $ref: '#/components/schemas/problemdetail.ProblemDetail'
           description: Internal Server Error
       summary: Update project automated testing setting
+      tags:
+      - projects
+  /v1/projects/{projectID}/documents:
+    get:
+      parameters:
+      - description: Project ID
+        in: path
+        name: projectID
+        required: true
+        schema:
+          type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                additionalProperties: {}
+                type: object
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/problemdetail.ProblemDetail'
+          description: Bad Request
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/problemdetail.ProblemDetail'
+          description: Internal Server Error
+      summary: Get all documents for a project
+      tags:
+      - projects
+    post:
+      parameters:
+      - description: Project ID
+        in: path
+        name: projectID
+        required: true
+        schema:
+          type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/schema.CreateProjectDocumentRequest'
+        description: Document Data
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                additionalProperties: {}
+                type: object
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/problemdetail.ProblemDetail'
+          description: Bad Request
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/problemdetail.ProblemDetail'
+          description: Internal Server Error
+      summary: Upload/Create a document for a project
       tags:
       - projects
   /v1/projects/{projectID}/environments:
