# internal/database/dbsqlc/models.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.30.0
+//   sqlc v1.29.0
 
 package dbsqlc
 
@@ -231,6 +231,18 @@ type Project struct {
 	TestcaseTemplate        sql.NullString
 	AutomatedTestingEnabled bool
 	SupportedRunners        []string
+}
+
+type ProjectDocument struct {
+	ID         uuid.UUID
+	ProjectID  int64
+	UploaderID int64
+	Name       string
+	FilePath   string
+	FileSize   sql.NullInt64
+	MimeType   sql.NullString
+	CreatedAt  sql.NullTime
+	UpdatedAt  sql.NullTime
 }
 
 type ProjectTester struct {
